# BinaryFileAnalyzer

./: CMakeLists.txt  LICENSE  README.md
tests/: test.cpp
